--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,10 @@
     "Ruben Seyferth <ruben.seyferth@gmail.com>"
   ],
   "description": "Semantic UI integeration for the Chicken framework",
-  "main": "build/chicken-semantic-ui.js",
+  "main": [
+    "build/chicken-semantic-ui.js",
+    "build/chicken-semantic-ui.css"
+  ],
   "license": "MIT",
   "homepage": "",
   "ignore": [
@@ -17,7 +20,7 @@
   "dependencies": {
     "chickenjs": "0.*",
     "semantic": "2.2.4",
-    "semantic-ui-daterangepicker": "master"
+    "bootstrap-daterangepicker": "^2.1.24"
   },
   "version": "0.1.3",
   "resolutions": {
