--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-babel": "^6.1.1",
     "gulp-connect": "^5.0.0",
     "gulp-eslint": "^3.0.1",
+    "gulp-load-plugins": "^1.3.0",
     "gulp-mocha": "^3.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
