--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "chickenjs": "0.*",
     "semantic": "2.2.10",
     "bootstrap-daterangepicker": "^2.1.24",
-    "dropzone": "^4.3.0"
+    "dropzone": "^4.3.0",
+    "semantic-ui-calendar": "^0.0.8"
   },
   "version": "0.1.15",
   "resolutions": {
