--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,5 @@
 {
-  "plugins": [
-    ["babel-root-import", {
-      "rootPathSuffix": "src"
-    }]
-  ],
   "presets": [
-    "es2015"
+      "@babel/preset-env"
   ]
 }
