--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-root-import": "^4.1.0",
     "chai": "^3.5.0",
